# Majiang

./: .gitignore  README.md  README.zh-CN.md
client/: README.md
client/src/pages/: _app.tsx
server/: Makefile  README.md  pyproject.toml  requirements.txt
server/src/mahjong/app/: main.py
server/src/mahjong/app/api/models/: schemas.py  user.py
server/src/mahjong/app/api/routers/: users.py
server/src/mahjong/app/auth/: security.py
server/src/mahjong/app/config/: database.py
server/src/mahjong/core/: __init__.py  env.py  example.py  rules.py  types.py
server/tests/: test_user.py
